# mask-value-cnn-ueba

./: .gitignore  DATA_ORGANIZATION.md  HANDOFF.md  LICENSE  Makefile  README.md  TRAJECTORY_LAB_NOTEBOOK.md  WINDOW_SIZE_ABLATION_README.md  analyze_aggregation_scores.py  plot_trajectory_pr_curves.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: WINDOW_SIZE_ABLATION_README.md  cert-experiment-notes.md  cnn-manifold-learning-implementation.md
examples/: cert_data_pipeline.py  exp005_fixed_window_pipeline.py  trajectory_analysis.py
manifold_ueba/: __init__.py  cnn_model.py  data.py  grid_search.py  latent_manifold.py  manifold_scorer.py  trajectory.py
manifold_ueba/etl/: __init__.py  cert_fixed_window.py  cert_v1.py
mv_ueba/: __init__.py  scoring.py
mv_ueba/etl/: __init__.py  cert_fixed_window.py
runs/exp012_lambda002_temp002/: config.json  latent_diagnostics.json  trajectory_level_results.json  window_level_results.json
runs/exp013_12hour_lambda002_temp002/: config.json  trajectory_level_results.json  window_level_results.json
runs/exp014_48hour_lambda002_temp002/: config.json  trajectory_level_results.json  window_level_results.json
scripts/: analyze_aggregation_scores.py  plot_trajectory_pr_curves.py
tests/: COVERAGE_MAP.md  test_basic.py  test_cnn_model.py  test_data.py  test_manifold.py  test_scoring.py  test_trajectory.py  validate_cnn_manifold.py
