[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mv-ueba"
version = "0.1.0"
description = "Mask-value CNN UEBA: dual-channel autoencoder and trajectory-level anomaly detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jericho Cain" }]
keywords = ["UEBA", "security", "analytics", "machine-learning", "manifold-learning", "anomaly-detection"]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.3,<2",
  "torch>=2.2,<3",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["mv_ueba*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mv_ueba"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
pretty = true
exclude = [
  "build",
  "dist",
  ".venv",
  "venv",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
